Fix help text color contrast

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -50,7 +50,7 @@ $color-state-file-input-border: #1B1B1B;
 $color-state-file-primary: #21C834;
 $color-state-file-separator: #BCBCBC;
 $color-state-file-chat: #4dcce3;
-$color-state-file-grey-darker: #808080;
+$color-state-file-grey-darker: #595959;
 
 // Size
 $intake-max-width: 570px;
